<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GithubUser</string>
    <string name="string_github_user">Github User</string>
    <string name="string_username">Username</string>
    <string name="string_adress">Address</string>
    <string name="string_follower_10000">10000</string>
    <string name="string_following_10000">10000</string>
    <string name="string_user_name">User Name</string>
    <string name="string_name">Name</string>
    <string name="string_location">Location</string>
    <string name="string_company">Company</string>
    <string name="string_repository_1000">1000</string>
    <string name="string_repository">Repository</string>
    <string name="btn_back_button">back button</string>
    <string name="btn_share_button">share button</string>
    <string name="string_icon_location">icon_location</string>
    <string name="string_icon_company">icon_company</string>
    <string name="string_following">Following</string>
    <string name="string_avatar">avatar</string>
    <string name="string_photo_avatar">photo Avatar</string>
    <string name="string_1000">1000</string>
    <string name="string_follower">Follower</string>
    <string name="search">search user</string>
    <string name="search_hint">Enter the word</string>
    <string name="menu_search">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="following">following</string>
    <string name="follwer">followers</string>
    <string name="string_detail">Detail</string>
    <string name="github_user_logo">Github user</string>
    <string name="no_followers">no followers</string>
    <string name="no_following">no following</string>
    <string name="button_language">language</string>
    <string name="button_theme">theme</string>
    <string name="back">back</string>
    <string name="button_favorite">favorite</string>
    <string name="no_data">no data</string>
</resources>